- Apply some left padding to the stats bar in the component

Scheduler 1.3.0-pl
------------------
Released on 2021-02-20

- Add indices for various fields used for searching and filtering, should improve performance on sites with a large history substantially [#25]
- Add task_key field to sTaskRun, to allow setting/searching/indexing of small pieces of data. Among other things, this allows outside extras to retrieve and act on task runs more easily.
- Track the processing time of task runs [#20]
- Add optional automatic cleanup of old tasks. Set the scheduler.delete_tasks_after system setting to a value like "-1 year" or "-2 weeks" to remove completed and failed tasks older than that.

Scheduler 1.2.0-pl
------------------
Released on 2020-01-03

- Fix use of old modAction-based routing, removed in 3.0
- Fix incorrect processor names with new case sensitivity in 3.0
- Improve display of grids in MODX3 to better fit with the gear icon
- Better handle Error/Exceptions triggered by a task
- Make sure modError service is loaded
- Send an email when a task run fails to configured address (scheduler.email_failure setting) [#14]

Scheduler 1.1.0-pl
------------------
Released on 2015-05-29

- sTask->schedule now returns the sTaskRun object on success
- Add option to schedule a task from the task context menu (#11)
- Fix several issues when sTaskRun.data isn't an array (#15, #18)
- Use configured manager_date_format and manager_time_format for the date/time displayed in the component (#16)
- Fix adding non-snippet tasks due to validation (#13)
- Fix fields being duplicated in the Tasks window
- Improve display of (nested) data arrays in grid

Scheduler 1.0.2-pl
------------------
Released on 2014-05-29

Fix typos in English lexicon, added Dutch and German (Thx Christian Seel!)

Scheduler 1.0.1-pl
------------------
Released on 2014-05-07

- Fixed: load right package meta data at installation


Scheduler 1.0.0-pl
------------------
Released on 2014-05-07

- Initial release