@@ -16,13 +16,13 @@ class getTaskStatsProcessor extends modProcessor {
         $pastdue = $this->modx->getCount('sTaskRun', array('status' => sTaskRun::STATUS_SCHEDULED, 'AND:timing:<' => time()));
         $running = $this->modx->getCount('sTaskRun', array('status' => sTaskRun::STATUS_EXECUTING));
         $completed = $this->modx->getCount('sTaskRun', array('status' => sTaskRun::STATUS_SUCCESS, 'OR:status:=' => sTaskRun::STATUS_FAILURE));
-        $stats = array(
-            'scheduler-upcoming-queued' => (string)$queued,
-            'scheduler-upcoming-pastdue' => (string)$pastdue,
-            'scheduler-upcoming-running' => (string)$running,
-            'scheduler-upcoming-completed' => (string)$completed,
-        );
-        return $this->modx->toJSON(array('success' => true, 'stats' => $stats));
+        $stats = [
+            'scheduler-upcoming-queued' => number_format($queued),
+            'scheduler-upcoming-pastdue' => number_format($pastdue),
+            'scheduler-upcoming-running' => number_format($running),
+            'scheduler-upcoming-completed' => number_format($completed),
+        ];
+        return $this->modx->toJSON(['success' => true, 'stats' => $stats]);
     }
 }
 
